--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,10 @@
                         <span class="badge active">Active</span>
                     </div>
                     <h3>Hyggshi OS 3.0</h3>
-                    <p style="color: var(--c-text-muted);">Phiên bản chính thức mới nhất với thiết kế Cloudar OS. Hỗ trợ
+                    <p style="color: var(--c-text-muted); margin-bottom: 1.5rem;">Phiên bản chính thức mới nhất với
+                        thiết kế Cloudar OS. Hỗ trợ
                         Module System và Cloud Sync.</p>
+                    <a href="download.html" class="btn btn-primary" style="width: 100%;">Tải xuống</a>
                 </div>
                 <div class="card">
                     <div
@@ -55,8 +57,11 @@
                         <span class="badge active">Active</span>
                     </div>
                     <h3>Hyggshi OS Flex</h3>
-                    <p style="color: var(--c-text-muted);">Phiên bản nhẹ, dễ tùy biến dành cho developer muốn fork và
+                    <p style="color: var(--c-text-muted); margin-bottom: 1.5rem;">Phiên bản nhẹ, dễ tùy biến dành cho
+                        developer muốn fork và
                         phát triển riêng.</p>
+                    <a href="https://github.com/HyggshiOSDeveloper/Hyggshi-OS-project-center" target="_blank"
+                        class="btn btn-secondary" style="width: 100%;">GitHub</a>
                 </div>
                 <div class="card">
                     <div
@@ -65,8 +70,10 @@
                         <span class="badge active">Active</span>
                     </div>
                     <h3>Code Mini</h3>
-                    <p style="color: var(--c-text-muted);">Trình soạn thảo code nhẹ tích hợp trong Hyggshi OS với syntax
+                    <p style="color: var(--c-text-muted); margin-bottom: 1.5rem;">Trình soạn thảo code nhẹ tích hợp
+                        trong Hyggshi OS với syntax
                         highlighting.</p>
+                    <a href="HyggshiOSCodeMini.html" class="btn btn-secondary" style="width: 100%;">Xem chi tiết</a>
                 </div>
             </div>
         </section>
