--- a/index.html
+++ b/index.html
@@ -143,13 +143,18 @@
         }
 
         container.innerHTML = releases.map(r => `
-                    <a href="${r.html_url}" target="_blank" class="card" style="text-decoration: none;">
-                        <div class="badge active" style="margin-bottom: 1rem;">${r.tag_name}</div>
-                        <h3>${r.name || r.tag_name}</h3>
-                        <p style="color: var(--c-text-muted); font-size: 0.9rem;">
-                            ${new Date(r.published_at).toLocaleDateString('vi-VN')}
-                        </p>
-                    </a>
+                    <div class="card" style="display: flex; flex-direction: column; justify-content: space-between;">
+                        <div>
+                            <div class="badge active" style="margin-bottom: 1rem;">${r.tag_name}</div>
+                            <h3>${r.name || r.tag_name}</h3>
+                            <p style="color: var(--c-text-muted); font-size: 0.9rem; margin-bottom: 1.5rem;">
+                                ${new Date(r.published_at).toLocaleDateString('vi-VN')}
+                            </p>
+                        </div>
+                        <a href="${r.html_url}" target="_blank" class="btn btn-secondary" style="width: 100%; font-size: 0.9rem;">
+                            <span>📦</span> View Release
+                        </a>
+                    </div>
                 `).join('');
       } catch (e) {
         container.innerHTML = '<div class="card"><p style="color: var(--c-text-muted);">Không thể tải dữ liệu.</p></div>';
